<resources>
    <string name="splash_message">The Best\nHome-cooked\nfood at your door</string>
    <string name="hint_home_search">Search restaurant</string>
    <string name="cart_title">Your cart</string>
    <string name="label_refine">Refine</string>
    <string name="refine_reset_title">Reset</string>
    <string name="label_cart">Cart</string>
    <string name="date">10\nMay</string>
    <string name="sample_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="cod_message">Be ready with enough cash when our delivery guy visits your place</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search_header">Search for: %s</string>
    <string name="cart_clear">Clear cart</string>
    <string name="loading">…</string>
    <string name="phone_number">Phone number</string>
    <string name="register_now">Register now</string>
    <string name="already_registered">Already registered?</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="confirm_password"> Confirm Password </string>
    <string name="new_password"> New Password </string>
    <string name="email_address"> Email Address </string>
    <string name="name"> Name </string>
    <string name="order_placed">Order Placed</string>
    <string name="review_order">Review Order</string>
    <string name="continue_ordering">Continue Ordering</string>
    <string name="personal_details">Personal details</string>
    <string name="full_name">Full name</string>
    <string name="your_saved_addresses">Your saved addresses</string>
    <string name="add_new_address">Add new address</string>
    <string name="password">Password</string>
    <string name="new_user">New User ?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="forgot_password">Forgot password?</string>
</resources>