<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.verbosetech.cookfu.fragment.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp32">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:fontFamily="@font/roboto"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp32"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:visibility="gone" />

        <include layout="@layout/progress_bar_horizontal" />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/round_accent_light"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/sign_in_now"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp4"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user" />

            <TextView
                android:id="@+id/switchSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp4"
                android:text="@string/sign_up_now"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" or" />
        </LinearLayout>

        <TextView
            android:id="@+id/guestContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:background="@drawable/round_accent"
            android:gravity="center"
            android:padding="12dp"
            android:text="Continue as Guest"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>
