<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp16"
    tools:context="com.verbosetech.cookfu.fragment.DetailsFragment">

    <LinearLayout
        android:id="@+id/personalDetailsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/personal_details"
                android:textColor="@color/colorDarkText4"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp4"
                android:src="@drawable/ic_edit_gray_24dp"
                android:visibility="gone" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp8"
                    android:clickable="false"
                    android:focusable="false">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/full_name"
                        android:inputType="none" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp8"
                    android:clickable="false"
                    android:focusable="false">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/email_address"
                        android:inputType="none" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp8"
                    android:clickable="false"
                    android:focusable="false">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/phone_number"
                        android:inputType="none" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:text="@string/your_saved_addresses"
            android:textColor="@color/colorDarkText4"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground" />

            <include layout="@layout/empty_view_text" />
        </FrameLayout>

        <TextView
            android:id="@+id/addAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_add_circle_outline_accent_24dp"
            android:drawablePadding="@dimen/dp4"
            android:padding="@dimen/dp4"
            android:text="@string/add_new_address"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
