<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".checkout.OrderPlacedActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/order_placed"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="60dp"
            android:paddingTop="20dp"
            android:paddingRight="60dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/confirmImage"
                android:layout_width="208dp"
                android:layout_height="208dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="64dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/confirmTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:letterSpacing="0.01"
                android:text="Hey, Sam Smith"
                android:textColor="#4a4a4a"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confirmMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="46dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="Your order with Global China Restaurant is confirmed and will delivered at your place as soon as possible"
                android:textColor="#444444"
                android:textSize="12sp"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/continueShopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:background="@drawable/round_accent_2"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.01"
            android:text="@string/continue_ordering"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/continueMyOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_white_2"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.01"
            android:text="@string/review_order"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>
